@@ -52,6 +52,7 @@
      by dkrause@
  - (djm) [configure.ac] fix alignment of --without-stackprotect description
  - (djm) [configure.ac] --with-selinux too
+ - (djm) [regress/Makefile] cleanup PuTTY interop test droppings
 
 20080315
  - (djm) [regress/test-exec.sh] Quote putty-related variables in case they are
@@ -3820,4 +3821,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4893 2008/03/27 01:33:07 djm Exp $
+$Id: ChangeLog,v 1.4894 2008/03/27 06:42:06 djm Exp $
